--- a/Parcial 1/Tablas/Tablas.html
+++ b/Parcial 1/Tablas/Tablas.html
@@ -35,7 +35,7 @@
                 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Brasil.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1e7-1f1f7.png">
                     </th>
                     <th>17</th>
                     <th>14</th>
@@ -50,7 +50,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Argentina.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1e6-1f1f7.png">
                     </th>
                     <th>17</th>
                     <th>11</th>
@@ -64,7 +64,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Uruguay.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1fa-1f1fe.png">
                     </th>
                     <th>18</th>
                     <th>8</th>
@@ -78,7 +78,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Ecuador.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1ea-1f1e8.png">
                     </th>
                     <th>18</th>
                     <th>7</th>
@@ -92,7 +92,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Perú.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f5-1f1ea.png">
                     </th>
                     <th>18</th>
                     <th>7</th>
@@ -106,7 +106,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Colombia.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1e8-1f1f4.png">
                     </th>
                     <th>18</th>
                     <th>5</th>
@@ -120,7 +120,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Chile.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1e8-1f1f1.png">
                     </th>
                     <th>18</th>
                     <th>5</th>
@@ -134,7 +134,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Paraguay.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f5-1f1fe.png">
                     </th>
                     <th>18</th>
                     <th>3</th>
@@ -148,7 +148,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Bolivia.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1e7-1f1f4.png">
                     </th>
                     <th>18</th>
                     <th>4</th>
@@ -162,7 +162,7 @@
 
                 <tr>
                     <th>
-                        <img class="bandera"src="C:\Users\Usuario\Desktop\Banderas/Venezuela.png" >
+                        <img class="bandera"src="https://images.emojiterra.com/twitter/v14.0/512px/1f1fb-1f1ea.png">
                     </th>
                     <th>18</th>
                     <th>3</th>
