--- a/Parcial 1/Menu Acordeon/Menu.html
+++ b/Parcial 1/Menu Acordeon/Menu.html
@@ -8,37 +8,90 @@
     <link rel="stylesheet" href="Menu.css">
 </head>
 <body>
-    <ul>
-        <li class="opcion">Grupo A
-            <ul>
-                <li class="sub_opcion">Opcion 1-1</li>
-                <li class="sub_opcion">Opcion 1-2</li>
-                <li class="sub_opcion">Opcion 1-3</li>
-            </ul>
-        </li>
-        <li class="opcion">Grupo B
-            <ul>
-                <li class="sub_opcion">Opcion 2-1</li>
-                <li class="sub_opcion">Opcion 2-2</li>
-                <li class="sub_opcion">Opcion 2-3</li>
-            </ul>
-        </li>
-        <li class="opcion">Grupo C
-            <ul>
-                <th>PAIS</th> 
-                <th>PJ</th>
-                <th>PG</th>
-                <th>PE</th>
-                <th>PP</th>
-                <th>GF</th>
-                <th>GC</th>
-                <th>+/-</th>
-                <th>PUNTOS</th>                
-            </ul>
-        </li>
-    </ul>
-
-    
-
+    <div class="mundial">
+        <ul>
+            <li class="opcion"> 
+                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                Grupo A
+                <ul>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f6-1f1e6.png">Catar</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1ea-1f1e8.png">Ecuador</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f8-1f1f3.png">Senegal</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f3-1f1f1.png">Paises Bajos</li>
+                </ul>
+            </li>
+            <li class="opcion">
+                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                Grupo B
+                <ul>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f3f4-e0067-e0062-e0065-e006e-e0067-e007f.png">Inglaterra</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1ee-1f1f7.png">Irán </li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1fa-1f1f8.png">Estados Unidos </li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f3f4-e0067-e0062-e0077-e006c-e0073-e007f.png">Gales </li>
+                </ul>
+            </li>
+            <li class="opcion">
+                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                Grupo C
+                <ul>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1e6-1f1f7.png">Argentina</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f8-1f1e6.png">Arabia Saudita</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f2-1f1fd.png">México</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f5-1f1f1.png">Polonia</li>           
+                </ul>
+            </li>
+            <li class="opcion">
+                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                Grupo D
+                <ul>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1eb-1f1f7.png">Francia</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e6-1f1fa.png">Australia</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e9-1f1f0.png">Dinamarca</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f9-1f1f3.png">Túnez</li>        
+                </ul>
+            </li>
+            <li class="opcion">
+                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                Grupo E
+                <ul>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1ea-1f1f8.png">España</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e8-1f1f7.png">Costa Rica</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e9-1f1ea.png">Alemania</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1ef-1f1f5.png">Japón</li>        
+                </ul>
+            </li>
+            <li class="opcion">
+                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                Grupo F
+                <ul>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e7-1f1ea.png">Bélgica</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e8-1f1e6.png">Canada</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f2-1f1e6.png">Marruecos</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1ed-1f1f7.png">Croacia</li>        
+                </ul>
+            </li>
+            <li class="opcion">
+                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                Grupo G
+                <ul>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e7-1f1f7.png">Brasil</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f7-1f1f8.png">Serbia</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e8-1f1ed.png">Suiza</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e8-1f1f2.png">Camerún</li>        
+                </ul>
+            </li>
+            <li class="opcion">
+                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                Grupo H
+                <ul>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f5-1f1f9.png">Portugal</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1ec-1f1ed.png">Ghana</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1fa-1f1fe.png">Uruguay</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f0-1f1f7.png">Replica de Korea</li>        
+                </ul>
+            </li>
+        </ul>
+        
+    </div>  
 </body>
 </html>
