--- a/Parcial 1/Media Query/Media.html
+++ b/Parcial 1/Media Query/Media.html
@@ -9,12 +9,45 @@
 </head>
 <body>
     <div class="contenedor">
-        <div id="caja1" class="caja">caja1</div>
-        <div id="caja2" class="caja">caja2</div>
-        <div id="caja3" class="caja">caja3</div>
-        <div id="caja4" class="caja">caja4</div>
-        <div id="caja5" class="caja">caja5</div>
-        <div id="caja6" class="caja">caja6</div>
+        <h1>|SELECCIONA A TU JUGADOR FAVORITO|</h1>
+    <div class="contenedor">
+        <div id="Personaje 1"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07122204815_carlos-acevedo2.png) ;">
+            <Strong>Acevedo</Strong>
+        </div>
+        <div id="Personaje 2"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07121334875_matheus-doria.png);">
+            <strong>Doria</strong>
+        </div>
+        <div id="Personaje 3"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07135924448_alan-cervantes.png);">
+            <strong>Cervantes</strong>
+        </div>
+        <div id="Personaje 4"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07135001057_fernando-gorriaran.png);">
+            <strong>Gorriaran</strong>
+        </div>
+        <div id="Personaje 5"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07123337859_leo-suarez.png);">
+            <strong>Suarez</strong>
+        </div>
+        <div id="Personaje 6"class="Personaje" style="background-image:url(https://ttassets.azureedge.net/ttsocial/07121236600_eduardo-aguirre.png) ;">
+            <strong>Aguirre</strong>
+        </div>
+        <div id="Personaje 7"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07135717192_javier-correa.png);">
+            <strong>Correa</strong>
+        </div>
+        <div id="Personaje 8"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07121442153_harold-preciado.png);">
+            <strong>Preciado</strong>
+        </div>
+        <div id="Personaje 9"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07122139025_juan-brunetta.png);">
+            <strong>Bruneta</strong>
+        </div>
+        <div id="Personaje 10"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07121530011_felix-torres.png);">
+            <strong>Torres</strong>
+        </div>
+        <div id="Personaje 11"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07135818426_omar-campos.png);">
+             <strong>Campos</strong>
+        </div>
+        <div id="Personaje12"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07130632906_hector-holguin.png);">
+             <strong>Holguin</strong>
+        </div>
+    </div>
     </div>
 </body>
 </html>
