--- a/Parcial 1/Media Query/Media.html
+++ b/Parcial 1/Media Query/Media.html
@@ -10,7 +10,7 @@
 <body>
     <div class="contenedor">
         <h1>|SELECCIONA A TU JUGADOR FAVORITO|</h1>
-    <div class="contenedor">
+    
         <div id="Personaje 1"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07122204815_carlos-acevedo2.png) ;">
             <Strong>Acevedo</Strong>
         </div>
@@ -47,7 +47,10 @@
         <div id="Personaje12"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07130632906_hector-holguin.png);">
              <strong>Holguin</strong>
         </div>
-    </div>
+        <div id="Personaje13" class="Personaje">
+            <img  src="https://ttassets.azureedge.net/ttsocial/07130632906_hector-holguin.png">
+            Roberto
+        </div>
     </div>
 </body>
 </html>
