--- a/Parcial 1/Menu Acordeon/Menu2.html
+++ b/Parcial 1/Menu Acordeon/Menu2.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu acordeon</title>
-    <link rel="stylesheet" href="Menu.css">
+    <title>Menu Acordeon 2</title>
+    <link rel="stylesheet" href="Menu2.css">
+
 </head>
 <body>
-    <div class="mundial">
-        <ul>
-            <li class="opcion"> 
-                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
-                Grupo A
+    <div id="header">
+        <ul class="nav">
+            <li class="opcion">
+                <a>
+                    <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                    Grupo A
+                </a>
                 <ul>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f6-1f1e6.png">Catar</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1ea-1f1e8.png">Ecuador</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f8-1f1f3.png">Senegal</li>
-                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f3-1f1f1.png">Paises Bajos</li>
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f3-1f1f1.png">Paises Bajos</li>   
                 </ul>
             </li>
             <li class="opcion">
-                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
-                Grupo B
+                <a>
+                    <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                    Grupo B
+                </a>
                 <ul>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f3f4-e0067-e0062-e0065-e006e-e0067-e007f.png">Inglaterra</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1ee-1f1f7.png">Irán </li>
@@ -31,8 +36,10 @@
                 </ul>
             </li>
             <li class="opcion">
-                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
-                Grupo C
+                <a>
+                    <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                    Grupo C
+                </a>
                 <ul>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1e6-1f1f7.png">Argentina</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/512px/1f1f8-1f1e6.png">Arabia Saudita</li>
@@ -41,8 +48,10 @@
                 </ul>
             </li>
             <li class="opcion">
-                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
-                Grupo D
+                <a>
+                    <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                    Grupo D
+                </a>
                 <ul>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1eb-1f1f7.png">Francia</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e6-1f1fa.png">Australia</li>
@@ -51,8 +60,10 @@
                 </ul>
             </li>
             <li class="opcion">
-                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
-                Grupo E
+                <a>
+                    <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                    Grupo E
+                </a>
                 <ul>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1ea-1f1f8.png">España</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e8-1f1f7.png">Costa Rica</li>
@@ -61,8 +72,10 @@
                 </ul>
             </li>
             <li class="opcion">
-                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
-                Grupo F
+                <a>
+                    <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                    Grupo F
+                </a>
                 <ul>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e7-1f1ea.png">Bélgica</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e8-1f1e6.png">Canada</li>
@@ -71,8 +84,10 @@
                 </ul>
             </li>
             <li class="opcion">
-                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
-                Grupo G
+                <a>
+                    <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                    Grupo G
+                </a>
                 <ul>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1e7-1f1f7.png">Brasil</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f7-1f1f8.png">Serbia</li>
@@ -81,16 +96,18 @@
                 </ul>
             </li>
             <li class="opcion">
-                <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
-                Grupo H
+                <a>
+                    <img class="logo" src="https://static.wixstatic.com/media/bbe01b_c4b47521203846faa70386699da89057~mv2.png/v1/crop/x_0,y_0,w_898,h_790/fill/w_480,h_420,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/FIFA%20World%20Cup%20Qatar%202022%20Logo%20(PNG-1080p)%20-%20FileVector69.png">
+                    Grupo H
+                </a>
                 <ul>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f5-1f1f9.png">Portugal</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1ec-1f1ed.png">Ghana</li>
                     <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1fa-1f1fe.png">Uruguay</li>
-                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f0-1f1f7.png">Replica de Korea</li>        
+                    <li class="sub_opcion"><img class="bandera" src="https://images.emojiterra.com/twitter/v14.0/128px/1f1f0-1f1f7.png">Replica de Corea</li>        
                 </ul>
             </li>
         </ul>
-    </div>  
+    </div>
 </body>
 </html>
