--- a/Parcial 1/DisplayFlex/DisplayF.html
+++ b/Parcial 1/DisplayFlex/DisplayF.html
@@ -9,14 +9,22 @@
 </head>
 <body>
     <div class="contenedor">
-        <div id="caja1" class="caja">Caja 1</div>
+        <div>
+            <nav>Nav</nav>
+        </div>
+        <div id="caja1" class="caja">
+            <div>
+                <a id="opc1" href="#opcion1">Opcion1</a>
+            </div>
+            <div>
+                <a id="opc2" href="#opcion1">Opcion2</a>
+            </div>
+            <div>
+                <a id="opc3" href="#opcion1">Opcion3</a>
+            </div>
+        </div>
         <div id="caja2" class="caja">Caja 2</div>
-        <div id="caja3" class="caja">Caja 3</div>
-        <div id="caja4" class="caja">Caja 4</div>
-        <div id="caja5" class="caja">Caja 5</div>
-        <div id="caja6" class="caja">Caja 6</div>
-        <div id="caja7" class="caja">Caja 7</div>
-        <div id="caja8" class="caja">Caja 8</div>
+        
     </div>
 </body>
 </html>
