--- a/Parcial 1/10 Grid layot/DisplayPadre.html
+++ b/Parcial 1/10 Grid layot/DisplayPadre.html
@@ -9,14 +9,12 @@
 </head>
 <body>
     <div id="cont" class="contenedor">
-        <div id="caja1" class="caja">Caja 1</div>
-        <div id="caja2" class="caja">Caja 2</div>
-        <div id="caja3" class="caja">Caja 3</div>
-        <div id="caja4" class="caja">Caja 4</div>        
-        <div id="caja5" class="caja">Caja 5</div>
-        <div id="caja6" class="caja">Caja 6</div>
-        <div id="caja7" class="caja">Caja 7</div>
-        <div id="caja8" class="caja">Caja 8</div>
+        <div id="encabezado" class="caja">Caja 1</div>
+        <div id="menuLateral" class="caja">Caja 2</div>
+        <div id="columna1" class="caja">Caja 3</div>
+        <div id="columna2" class="caja">Caja 4</div>        
+        <div id="pie" class="caja">Caja 5</div>
+        
     </div>
 </body>
 </html>
