--- a/Parcial 2/SideBarToogle/SideBarToogle.html
+++ b/Parcial 2/SideBarToogle/SideBarToogle.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="Estilo.css">
 </head>
 <body>
-    <input type="checkbox" id="toogle">
-    <div class="sideBar">
-        <a href="#op1" id="opcion1">Opcion1</a>
-        <a href="#op2" id="opcion2">Opcion2</a>
-        <a href="#op3" id="opcion3">Opcion3</a>
-        <a href="#op4" id="opcion4">Opcion4</a>        
+    <div class="cont">
+        <input type="checkbox" id="toogle">
+        <div class="sideBar">
+            <a href="#op1" id="opcion1">Opcion1</a>
+            <a href="#op2" id="opcion2">Opcion2</a>
+            <a href="#op3" id="opcion3">Opcion3</a>
+            <a href="#op4" id="opcion4">Opcion4</a>        
+        </div>
+        <div class="content">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+        </div>
     </div>
-    <div class="content">
-        <div></div>
-    </div>
+    
 </body>
 </html>
