--- a/Parcial 1/6 Media Query/Media.html
+++ b/Parcial 1/6 Media Query/Media.html
@@ -12,7 +12,7 @@
         <h1>|SELECCIONA A TU JUGADOR FAVORITO|</h1>
     
         <div id="Personaje 1"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07122204815_carlos-acevedo2.png) ;">
-            <Strong>Acevedo</Strong>
+            <strong>Acevedo</strong>
         </div>
         <div id="Personaje 2"class="Personaje" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07121334875_matheus-doria.png);">
             <strong>Doria</strong>
