--- a/Parcial 2/2 Registro eventos/RegistroEv.html
+++ b/Parcial 2/2 Registro eventos/RegistroEv.html
@@ -11,7 +11,7 @@
     <div class="contenedor">
         <h1>|SELECCIONA A TU JUGADOR FAVORITO|</h1>
     
-        <div id="Personaje 1"class="Personaje" onclick="alert('Diste click a la caja 1')" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07122204815_carlos-acevedo2.png) ;">
+        <div id="Personaje 1"class="Personaje" onclick="alert('Hola, soy Carlos Acevedo')" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07122204815_carlos-acevedo2.png) ;">
             <strong>Acevedo</strong>
         </div>
         <div id="Personaje 2"class="Personaje" onclick="Saludar()" style="background-image: url(https://ttassets.azureedge.net/ttsocial/07121334875_matheus-doria.png);">
