--- a/Parcial 2/4 DelEvJQ/JQ.html
+++ b/Parcial 2/4 DelEvJQ/JQ.html
@@ -10,15 +10,43 @@
     <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
-    <div class="contenedor" id="cont">
-        <div id="caja1" class="caja">Caja 1</div>
-        <div id="caja2" class="caja">Caja 2</div>
-        <div id="caja3" class="caja">Caja 3</div>
-        <div id="caja4" class="caja">Caja 4</div>
-        <div id="caja5" class="caja">Caja 5</div>
-        <div id="caja6" class="caja">Caja 6</div>
-        <div id="caja7" class="caja">Caja 7</div>
-        <div id="caja8" class="caja">Caja 8</div>
+    <div class="contenedor" id="cont">        
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07122204815_carlos-acevedo2.png">
+            Carlos Acevedo
+        </div>
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07121334875_matheus-doria.png">
+            Matheus Doria
+        </div>
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07135924448_alan-cervantes.png">
+            Alan Cervantes
+        </div>
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07135001057_fernando-gorriaran.png">
+            Fernando Gorriaran
+        </div>
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07123337859_leo-suarez.png">
+            Leo Suarez
+        </div>
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07121236600_eduardo-aguirre.png">
+            Eduardo Aguirre
+        </div>
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07135717192_javier-correa.png">
+            Javier Correa
+        </div>
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07121442153_harold-preciado.png">
+            Harold Preciado
+        </div>
+        <div id="caja1" class="caja">
+            <img class="foto" src="https://ttassets.azureedge.net/ttsocial/07122139025_juan-brunetta.png">
+            Juan Bruneta
+        </div>
     </div>
 
     
