--- a/Parcial 2/6 XML HTTP Request/Request.html
+++ b/Parcial 2/6 XML HTTP Request/Request.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="myDiv"><h2>Header nivel 2</h2></div>
-    <button id="btnAjax" type="button">Cmabiar header</button>
+    <button id="btnAjax" type="button">Cambiar header</button>
     <button id="btnReset" type="button">Regresar</button>
 </body>
 </html>
