--- a/Parcial 2/9 Async Await/Async.html
+++ b/Parcial 2/9 Async Await/Async.html
@@ -23,7 +23,7 @@
 
         })
 
-        document.getElementById()
+        document.getElementById("btnPetFetchAsyncAwait").addEventListener("click", )
         
         document.getElementById("btnPetQuery").addEventListener("click", function()
         {
