--- a/Parcial 2/8 Fetch/fetch.html
+++ b/Parcial 2/8 Fetch/fetch.html
@@ -28,8 +28,8 @@
             {
                 $.getJSON("https://api.chucknorris.io/jokes/random", function(dataJson)
                 {
-                    document.getElementById("caja").innerText=dataJson.value
-                });
+                    document.getElementById("caja").innerText=dataJson.value;
+                })
             })
 
         })
