--- a/Parcial 3/4 Formulario resposivo/NuevoUs.html
+++ b/Parcial 3/4 Formulario resposivo/NuevoUs.html
@@ -9,13 +9,13 @@
 <body>
     <div class="contenedor">
         <form class="row">
-            <div class="col-6">
-                <label for="nombres" class="form-label">Nombre(s)</label><br>
+            <div class="form-group col-sm-12 col-md-6">
+                <label for="nombres" class="form-label">Nombre(s)</label>
                 <input type="text" class="form-control" id="nombres" placeholder="Nombre(s)">
             </div>
-            
-            <div class="col-6">
-                <label for="apellidos" class="form-label">Apellido(s)</label><br>
+
+            <div class="form-group col-sm-12 col-md-6">
+                <label for="apellidos" class="form-label">Apellido(s)</label>
                 <input type="text" class="form-control" id="apellidos" placeholder="Apellido">
             </div>
         </form>
