--- a/Parcial 3/4 Formulario resposivo/NuevoUs.html
+++ b/Parcial 3/4 Formulario resposivo/NuevoUs.html
@@ -18,7 +18,14 @@
                 <label for="apellidos" class="form-label">Apellido(s)</label>
                 <input type="text" class="form-control" id="apellidos" placeholder="Apellido">
             </div>
+
+            <div class="form-group col-sm-12 col-md-6 col-lg-4">
+                <label for="Contraseña" class="form-label">Contraseña</label>
+                <input type="text" class="form-control" id="Contraseña" placeholder="Contraseña">
+            </div>
+            <button id="btnGetReg" type="button">Generar registro</button>
         </form>
     </div>
+
 </body>
 </html>
