--- a/Parcial 3/4 Formulario resposivo/NuevoUs.html
+++ b/Parcial 3/4 Formulario resposivo/NuevoUs.html
@@ -46,7 +46,7 @@
                 <!-- Fecha -->
                 <div class="mb-3 form-group col-sm-12 col-md-6">
                     <label for="fechaNac" class="ms-3 form-label">Fecha de nacimieinto</label>
-                    <input class="ms-3 " type="date" id="start" name="trip-start"
+                    <input class="ms-3 " type="date" id="fechaNac" name="trip-start"
                     value="2022-11-17"
                     min="1900-01-01" max="2020-12-31">
                 </div>
@@ -79,7 +79,7 @@
             </form>
             <!-- Botones -->
             <div class="d-flex justify-content-center align-items-center">
-                <button type="button" class="btn btn-outline-success btn-sm mb-2 ms-1 me-2">Registrar</button>
+                <button id="btnGenReg" type="button" class="btn btn-outline-success btn-sm mb-2 ms-1 me-2">Registrar</button>
 
                 <button type="button" class="btn btn-outline-danger btn-sm mb-2 ms-1 me-2">Cancelar</button>
             </div>
