--- a/Parcial 3/4 Formulario resposivo/pruebs.html
+++ b/Parcial 3/4 Formulario resposivo/pruebs.html
@@ -14,16 +14,22 @@
         <form class="row my-3">
           <h5 class="text-primary text-center">Iniciar sesion</h5>
           <!-- Uusario -->
-          <div class="form-group col-sm-12 col-md-11">
-            <label for="usuarioLogin" class="ms-3 form-label" >ID o correo electronico</label>
-            <input type="text" class="ms-3 form-control" id="usuarioLogin" placeholder="ID O correo electrpnico">
+          <div class="mb-4 form-group col-sm-12 col-md-11">
+            <label for="usuarioLogin" class="ms-3 form-label">ID o correo electronico</label>
+            <input type="text" class="ms-3 form-control" id="usuarioLogin" placeholder="ID o correo electrpnico">
           </div>
           <!-- Contraseña -->
           <div class="form-group col-sm-12 col-md-11">
-            <label for="usuarioLogin" class="ms-3 form-label" >ID o correo electronico</label>
-            <input type="text" class="ms-3 form-control" id="usuarioLogin" placeholder="ID O correo electrpnico">
+            <label for="contraseñaLog" class="ms-3 form-label">Contraseña</label>
+            <input type="text" class="ms-3 form-control" id="contraseñaLog" placeholder="Contraseña">
           </div>
         </form>
+         <!-- Botones -->
+         <div class="d-flex justify-content-center align-items-center">
+          <button type="button" class="btn btn-outline-success btn-sm mb-2 ms-1 me-2">Entrar</button>
+
+          <button type="button" class="btn btn-outline-secondary btn-sm mb-2 ms-1 me-2">Volver</button>
+      </div>
       </div>
     </section>
 </body>
