--- a/pruebs.html
+++ b/pruebs.html
@@ -24,10 +24,14 @@
             <input type="text" class="ms-3 form-control" id="contraseñaLog" placeholder="Contraseña">
           </div>
         </form>
+        <!-- Check recordar -->
+        <div class="col-12 offset-sm-1">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="inlineFormCheck">
+            <label class="form-check-label" for="inlineFormCheck">Recordar mi sesion</label>
          <!-- Botones -->
          <div class="d-flex justify-content-center align-items-center">
           <button type="button" class="btn btn-outline-success btn-sm mb-2 ms-1 me-2">Entrar</button>
-
           <button type="button" class="btn btn-outline-secondary btn-sm mb-2 ms-1 me-2">Volver</button>
       </div>
       </div>
