--- a/Parcial 3/6 Consulta php-MySQL/Index.html
+++ b/Parcial 3/6 Consulta php-MySQL/Index.html
@@ -34,7 +34,7 @@
             <!-- Telefono -->
             <div class="form-group col-sm-12 col-md-5">
                 <label for="telefono" class="form-label">Telefono</label>
-                <input type="number" class="form-control" id="telefono" placeholder="867-***-***">
+                <input type="tel" class="form-control" id="telefono" placeholder="867-***-***">
             </div>
             <!-- Fecha -->
             <div class="form-group col-sm-12 col-md-5">
@@ -65,8 +65,8 @@
                 <span id="LargoContra1" class="form-text">De 8-20 caracteres de largo.</span>
             </div>
             <div class="form-group col-sm-12 col-md-5">
-                <label for="contraseña" class="form-label">Repetir contraseña</label>
-                <input type="password" class=" form-control" id="contraseña" placeholder="Contraseña">
+                <label for="contraseñaVal" class="form-label">Repetir contraseña</label>
+                <input type="password" class=" form-control" id="contraseñaVal" placeholder="Contraseña">
                 <span id="LargoContra2" class="form-text">De 8-20 caracteres de largo.</span>
             </div>
             <!-- Botones -->
