--- a/Parcial 3/6 Consulta php-MySQL/Index.html
+++ b/Parcial 3/6 Consulta php-MySQL/Index.html
@@ -76,6 +76,6 @@
             </div>            
         </div>
     </div>
-    <script src="./guardar.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
