--- a/Parcial 3/9 Sesiones/sesion.html
+++ b/Parcial 3/9 Sesiones/sesion.html
@@ -16,7 +16,7 @@
             <!-- Uusario -->
             <div class="mb-4 form-group col-sm-12 col-md-11">
               <label for="usuarioLogin" class="ms-3 form-label">ID o correo electronico</label>
-              <input type="text" class="ms-3 form-control" name="usuario" placeholder="ID o correo electrpnico">
+              <input type="text" class="ms-3 form-control" name="usuario" placeholder="ID o correo electronico">
             </div>
             <!-- Contraseña -->
             <div class="form-group col-sm-12 col-md-11">
