--- a/Proyecto/grid.html
+++ b/Proyecto/grid.html
@@ -16,6 +16,7 @@
 <body>
 
     <div id="jsGrid"></div>
+    
     <div class="mt-2 container d-flex justify-content-center align-items-center">
         <div class="row g-0 py-3 d-flex gap-2 border col-md-12 col-lg-8 justify-content-center align-items-center formulario">            
             <!-- Nombres -->
@@ -68,6 +69,7 @@
             <!-- Botones -->
             <div class="d-flex justify-content-center align-items-center">
                 <button id="btnInsertar" type="submit" class="btn btn-outline-success btn-sm mb-2 ms-1 me-2">Insertar</button>
+                <button id="btnBuscar" type="submit" class="btn btn-outline-success btn-sm mb-2 ms-1 me-2">Buscar</button>
                 <button id="btnModificar" type="submit" class="btn btn-outline-primary btn-sm mb-2 ms-1 me-2">Modificar</button>
                 <button id="btnEliminar" type="button" class="btn btn-outline-danger btn-sm mb-2 ms-1 me-2">Eliminar</button>
             </div>            
